# ckanext-resource-pagination

./: README.md  setup.cfg
ckanext/resource_pagination/: plugin.py  views.py
ckanext/resource_pagination/templates/package/: read.html
ckanext/resource_pagination/templates/package/snippets/: resources_list.html
