[metadata]
name = ckanext-resource-pagination
version = 0.2.1
description = Paginate the resource list on CKAN dataset pages with configurable page sizes
long_description = file: README.md
long_description_content_type = text/markdown
author = Tanmay Agrawal
license = AGPL-3.0
url = https://github.com/tanmayagrawal21/ckanext-resource-pagination
project_urls =
    Source = https://github.com/tanmayagrawal21/ckanext-resource-pagination
    Bug Tracker = https://github.com/tanmayagrawal21/ckanext-resource-pagination/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3

[options]
packages = find_namespace:
namespace_packages = ckanext
python_requires = >= 3.8

[options.packages.find]
include = ckanext.*

[options.package_data]
ckanext.resource_pagination = templates/**/*.html

[options.entry_points]
ckan.plugins =
    resource_pagination = ckanext.resource_pagination.plugin:ResourcePaginationPlugin
